# SFMLBook

./: CMakeLists.txt  main.cpp
core/: entity.cpp  entity.hpp  resource_holder.hpp
core/scene/: scene_node.cpp  scene_node.hpp  sprite_node.cpp  sprite_node.hpp
entity/: aircraft.cpp  aircraft.hpp
game/: game.cpp  game.hpp  world.cpp  world.hpp
game/constants/: textures.hpp  typedefs.hpp
